--- a/index65.html
+++ b/index65.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-	 <script src="http://code.jquery.com/jquery-latest.js">
+	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
 	 </script>
 	 <script>
 	     $(document).ready(function() {
@@ -18,3 +18,12 @@
 	 <button>Спрятать элементы с class=test</button>		 
    </body>
 </html>
+
+         <!--если выбираем библиотеку от Microsoft CDN-->
+	 <!--script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"></script-->
+	 <!--если выбираем библиотеку от Google-->
+	 <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script-->
+	 <!--третий вариант-->
+	 <!--script src="http://code.jquery.com/jquery-latest.js"></script-->
+	 <!--четвертый вариант, если нет интернета-->
+	 <!--script src="jQuery/jquery-latest.js"></script-->
