--- a/Variant4.html
+++ b/Variant4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-	 <script src="http://code.jquery.com/jquery-latest.js">
+	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
 	 </script>
 	 <script>
 	     $(document).ready(function() {
@@ -22,3 +22,5 @@
 	 <p align="center">А вот это еще один абзац текста с align="center"!</p> 
    </body>
 </html>
+
+
