--- a/index65.html
+++ b/index65.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
+	 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js">
 	 </script>
 	 <script>
 	     $(document).ready(function() {
