--- a/index63.html
+++ b/index63.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-	 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js">
+	 <script src="jQuery/jquery-latest.js">
 	 </script>
 	 <script>
 	     $(document).ready(function() {
