--- a/Variant4.html
+++ b/Variant4.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-	 <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"-->
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+	 <script src="jquery-3.4.1.min.js">
 	 </script>
 	 <script>
 	     $(document).ready(function() {
@@ -23,5 +22,4 @@
 	 <p align="center">А вот это еще один абзац текста с align="center"!</p> 
    </body>
 </html>
-
 
