--- a/index62.html
+++ b/index62.html
@@ -6,9 +6,9 @@
 	 <!--если выбираем библиотеку от Google-->
 	 <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script-->
 	 <!--третий вариант-->
-	 <script src="http://code.jquery.com/jquery-latest.js"></script>
+	 <!--script src="http://code.jquery.com/jquery-latest.js"></script-->
 	 <!--четвертый вариант, если нет интернета-->
-	 <!--script src="jQuery/jquery-latest.js"></script-->	 
+	 <script src="jquery-3.4.1.min.js"></script> 
    </head>
    <body>	 
    </body>
